--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@
     <groupId>groupId</groupId>
     <artifactId>restsec</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
+    <modules>
+        <module>restsec-core</module>
+        <module>restsec-samples</module>
+    </modules>
 
     <dependencies>
         <dependency>
@@ -15,5 +26,6 @@
             <version>4.12</version>
         </dependency>
     </dependencies>
+
 
 </project>
