--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,21 @@
     </modules>
 
     <dependencies>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+
+        <!-- coming soon, resolving proxy issues ...
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.0.0-M2</version>
+        </dependency>
+        -->
+
     </dependencies>
 
 
