- added JuiceShopXSS that stores a working payload and checks execution by GETting to a local Jetty Server

--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -1,9 +1,9 @@
-base-uri = http://192.168.99.103
+base-uri = http://192.168.99.100
 port = 3000
 base-path = /rest
 
 proxy_ip = 127.0.0.1
 proxy_port = 8080
 
-username = admin@juice-sh.op
-password = admin123
+username = jim@juice-sh.op
+password = ncc-1701
