--- a/restsec-samples/pom.xml
+++ b/restsec-samples/pom.xml
@@ -52,6 +52,12 @@
             <version>9.3.14.v20161028</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
