--- a/pom.xml
+++ b/pom.xml
@@ -21,21 +21,21 @@
 
     <dependencies>
 
+        <!--
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
-
-        <!-- coming soon, resolving proxy issues ...
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.0.0-M2</version>
-        </dependency>
         -->
 
-    </dependencies>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.0.0-M3</version>
+        </dependency>
 
+    </dependencies>
 
 </project>
