added Test classes, improved Evaluator

--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -8,9 +8,12 @@ proxy_port = 8080
 username = jim@juice-sh.op
 password = ncc-1701
 
-documentationType = hateoas
+documentationType = swagger
 entryPointHATEOAS = http://localhost:10001/albums/
 swaggerLocation = docs_swagger/swagger-juiceshop-short.json
 allHTTPMethods = false
 
-scanForVulnerabilityTypes = all
+xssPayloadsFile = payloads/xss-short.json
+sqliPayloadsFile = payloads/sqli.json
+
+scanForVulnerabilityTypes = xss
