--- a/restsec-samples/pom.xml
+++ b/restsec-samples/pom.xml
@@ -61,11 +61,17 @@
             <version>${org.seleniumhq.selenium.version}</version>
         </dependency>
 
-        <!-- JSON Simple -->
+        <!-- JSON Handling -->
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.7</version>
         </dependency>
 
         <!-- OWASP Dependency Checker -->
@@ -86,6 +92,13 @@
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-runner</artifactId>
+            <version>${junit.platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
             <version>${junit.platform.version}</version>
             <scope>test</scope>
         </dependency>
