reorganized project structure, starting with Code testing

--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -17,3 +17,5 @@ xssPayloadsFile = payloads/xss-short.json
 sqliPayloadsFile = payloads/sqli.json
 
 scanForVulnerabilityTypes = xss
+
+deleteOldResultsFile = true
