--- a/restsec-samples/pom.xml
+++ b/restsec-samples/pom.xml
@@ -75,7 +75,7 @@
             <version>1.4.3</version>
         </dependency>
 
-        <!-- Test Runner -->
+        <!-- Test -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
