--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -1,21 +1,28 @@
+# REST-assured
 base-uri = http://192.168.99.100
 port = 3000
 base-path = /
-
 proxy_ip = 127.0.0.1
 proxy_port = 8080
 
+# Credentials
 username = jim@juice-sh.op
 password = ncc-1701
 
+# Type (Swagger / HATEOAS)
 documentationType = swagger
+
+# Starting Points
 entryPointHATEOAS = http://localhost:10001/albums/
-swaggerLocation = docs_swagger/swagger-juiceshop-short.json
+swaggerLocation = src/main/resources/docs_swagger/swagger-juiceshop-short.json
+
+# Payload Files
+xssPayloadsFile = src/main/resources/payloads/xss-short.json
+sqliPayloadsFile = src/main/resources/payloads/sqli.json
+
+# Settings
 allHTTPMethods = false
-
-xssPayloadsFile = payloads/xss-short.json
-sqliPayloadsFile = payloads/sqli.json
-
 scanForVulnerabilityTypes = xss
-
 deleteOldResultsFile = true
+
+
