--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -2,6 +2,9 @@
 base-uri = http://192.168.99.100
 port = 3000
 base-path = /
+
+# Proxy
+useProxy = false
 proxy_ip = 127.0.0.1
 proxy_port = 8080
 
@@ -20,9 +23,15 @@ swaggerLocation = src/main/resources/docs_swagger/swagger-juiceshop-short.json
 xssPayloadsFile = src/main/resources/payloads/xss-short.json
 sqliPayloadsFile = src/main/resources/payloads/sqli.json
 
+# Payload Callback Server (jetty)
+deleteOldJettyLogs = true
+callback_port = 5555
+
 # Settings
+#bool
 allHTTPMethods = false
-scanForVulnerabilityTypes = xss
 deleteOldResultsFile = true
+#string
+scanForVulnerabilityTypes = xss
 
 
