Refactoring: packages, Factories

--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -13,11 +13,14 @@ username = jim@juice-sh.op
 password = ncc-1701
 
 # Type (Swagger / HATEOAS)
-documentationType = swagger
+crawlerType = swagger
 
 # Starting Points
 entryPointHATEOAS = http://localhost:10001/albums/
 swaggerLocation = src/main/resources/docs_swagger/swagger-juiceshop-short.json
+
+# AttackSet File Location
+attackSetFileLocation = default
 
 # Payload Files
 xssPayloadsFile = src/main/resources/payloads/xss-short.json
