--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-# REST-assured
+# Target
 base-uri = http://192.168.99.100
 port = 3000
 base-path = /
@@ -11,30 +11,23 @@ proxy_port = 8080
 # Credentials
 username = jim@juice-sh.op
 password = ncc-1701
+cookie = cookieabc123
 
-# Type (Swagger / HATEOAS)
+# Crawler (Swagger / HATEOAS)
 crawlerType = swagger
-
-# Starting Points
 entryPointHATEOAS = http://localhost:10001/albums/
 swaggerLocation = src/main/resources/docs_swagger/swagger-juiceshop-short.json
 
 # AttackSet File Location
 attackSetFileLocation = default
 
-# Payload Files
+# Scanner
 xssPayloadsFile = src/main/resources/payloads/xss-short.json
 sqliPayloadsFile = src/main/resources/payloads/sqli.json
+allHTTPMethods = false
+deleteOldResultsFile = true
+scannerType = xss
 
 # Payload Callback Server (jetty)
 deleteOldJettyLogs = true
 callback_port = 5555
-
-# Settings
-#bool
-allHTTPMethods = false
-deleteOldResultsFile = true
-#string
-scanForVulnerabilityTypes = xss
-
-
