--- a/restsec-samples/pom.xml
+++ b/restsec-samples/pom.xml
@@ -164,6 +164,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
+                <configuration>
+                    <excludes>
+                        <!--BasicSecurityHeaderTestsemos.java-->
+                    </excludes>
+                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
