--- a/restsec-core/pom.xml
+++ b/restsec-core/pom.xml
@@ -11,6 +11,12 @@
     </parent>
     <artifactId>restsec-core</artifactId>
 
+    <properties>
+         <maven.compiler.source>1.8</maven.compiler.source>
+         <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+         
+         
     <dependencies>
 
         <dependency>
