--- a/restsec-samples/pom.xml
+++ b/restsec-samples/pom.xml
@@ -154,6 +154,12 @@
             <version>1.7.5</version>
         </dependency>
 
+        <!-- Create HTML Reports with Apache Freemarker -->
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.23</version>
+        </dependency>
 
     </dependencies>
 
