added HTTP Security Header Tests

--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -25,8 +25,9 @@ attackSetFileLocation = default
 xssPayloadsFile = src/main/resources/payloads/xss-short.json
 sqliPayloadsFile = src/main/resources/payloads/sqli.json
 allHTTPMethods = false
-deleteOldResultsFile = true
+deleteOldResultsFile = false
 scannerType = xss
+performBasicSecurityHeaderTests = true
 
 # Payload Callback Server (jetty)
 deleteOldJettyLogs = true
