updated .css for better reporting, added some new Scanner and Reporting capabilities

--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -4,14 +4,15 @@ port = 3000
 base-path = /
 
 # Proxy
-useProxy = false
+useProxy = true
 proxy_ip = 127.0.0.1
 proxy_port = 8080
 
 # Credentials
 username = jim@juice-sh.op
 password = ncc-1701
-cookie = cookieabc123
+authtype = basic
+cookie = th1s_1S_A_t3sT_c0ok13
 
 # Crawler (Swagger / HATEOAS)
 crawlerType = swagger
@@ -22,10 +23,12 @@ swaggerLocation = src/main/resources/docs_swagger/swagger-juiceshop-short.json
 attackSetFileLocation = default
 
 # Scanner
+# xssPayloadsFile = src/main/resources/payloads/xss-short-1-attack-only.json
 xssPayloadsFile = src/main/resources/payloads/xss-short.json
 sqliPayloadsFile = src/main/resources/payloads/sqli.json
 allHTTPMethods = false
-deleteOldResultsFile = false
+deleteOldResultsFile = true
+# xss or sqli
 scannerType = xss
 performBasicSecurityHeaderTests = true
 
