--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -9,9 +9,14 @@ proxy_ip = 127.0.0.1
 proxy_port = 8080
 
 # Credentials
+#admin@juice-sh.op:admin123
 username = jim@juice-sh.op
 password = ncc-1701
-authtype = basic
+# none, basic, body, oauth2, openidconnect
+authtype = body
+# authorizationServer is only active on authtype: oauth2 and openidconnect
+oauth2token = c29tZW9hdXRoMnRva2VudGhhdGlzdXNlZGZvcmF1dGhlbnRpY2F0aW9u
+authorizationServerPath = 127.0.0.1/test
 cookie = th1s_1S_A_t3sT_c0ok13
 
 # Crawler (Swagger / HATEOAS)
