--- a/restsec-samples/src/main/resources/config.properties
+++ b/restsec-samples/src/main/resources/config.properties
@@ -4,7 +4,7 @@ port = 3000
 base-path = /
 
 # Proxy
-useProxy = true
+useProxy = false
 proxy_ip = 127.0.0.1
 proxy_port = 8080
 
@@ -13,10 +13,11 @@ proxy_port = 8080
 username = jim@juice-sh.op
 password = ncc-1701
 # none, basic, body, oauth2, openidconnect
-authtype = body
+authtype = oauth2
 # authorizationServer is only active on authtype: oauth2 and openidconnect
-oauth2token = c29tZW9hdXRoMnRva2VudGhhdGlzdXNlZGZvcmF1dGhlbnRpY2F0aW9u
-authorizationServerPath = 127.0.0.1/test
+#oauth2accesstoken = c29tZW9hdXRoMnRva2VudGhhdGlzdXNlZGZvcmF1dGhlbnRpY2F0aW9u
+#oauth2accesstoken = c29tZW9hdX
+authorizationServerEndpoint = 127.0.0.1/test
 cookie = th1s_1S_A_t3sT_c0ok13
 
 # Crawler (Swagger / HATEOAS)
